OpenSLP Change Log
------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================
06/12/01 mpeterson@caldera.com
Fixed 418877 - SegV when finding attrs on certain URLS

06/12/01 mpeterson@caldera.com
Fixed 418894 - Escape chars as attr names kill slpd

05/31/01 mpeterson@caldera.com
Testing commits mailing list...

05/30/01 mpeterson@caldera.com
Applied BSD patch from Terry Lambert

05/10/01 rganesan@myrealbox.com
Updated NEWS.

05/10/01 rganesan@myrealbox.com
Fixed up broken SLPv1 support.

05/10/01 rganesan@myrealbox.com
Changed includes of the form "../common/header.h" to "header.h" because of
potential breakage for non source directory builds.

05/10/01 rganesan@myrealbox.com
Added a EPM slp.list.in file and updated configure.in. EPM is an Easy
Package Manager (http://www.easysw.com/epm) that allows easy creation of
different packaging formats.

04/26/01 mpeterson@caldera.com
Added more documentation to the usage output of slptool

*** Tag OpenSLP 0.9.0 ***

04/10/01 mpeterson@caldera.com
Brought Win32 port up to date with 0.9.0 source code

04/18/01 mpeterson@caldera.com
Fixed several socket re-connect, re-usage and aging bugs

04/18/01 mpeterson@caldera.com
Finalized SLPv2 authentication support

04/18/01 mpeterson@caldera.com
Changed registration database debug dump to use new database interface, and
added debug dump of known DA database

04/18/01 mpeterson@caldera.com
Cleaned logging code

04/18/01 mpeterson@caldera.com
Prepared libslp for colation by internal callback interface

04/18/01 mpeterson@caldera.com
Libslp now handles SrvRqsts made with the reserved agent types
"service:directory-agent" and "service:service-agent"

04/18/01 mpeterson@caldera.com
Added checkSourceAddr security feature
